Changes to 1.2.4 +nb
[CHANGES]
*home.php --> added a "forgotten password" link below the Login Button
[FIXES]
[REMOVES]
[NOTES]

Changes to 1.2.3 +nb
[CHANGES]
*login.php, superuser.php --> now superusers who logout to the fields will be brought to the grotto on login (no newday). So people who "just check in" won't be bothered with a new day unless they want it. In superuser.php I put in a logout for superusers. In login.php it checks if a superuser with (!) grotto access logs out.
*login.php --> lowered the threshold for bans to 15 minutes
*lib/sanitize.php --> new function sanitize_mb($str), which will cut a string until it is a valid encoding - or 0.
[FIXES]
Well, a big group of problems shows up with multibyte strings. substr breaks multibytes, hence causing errors.
*battle.php --> line 404. Fixed an error where no $creature['experiencegained'] was defined. Causing errors in PHP 5.3.3
*donators.php --> now if the exact name is found, it will be returned instead of <=100 alternatives.
*lib/commentary.php --> same here + added GM/MOD stuff to the names
*lib/mail/case_*.php --> fixed substrs and added sanitize_mb if stuff breaks from httpget (length)
*logdnet.php --> encoding fix for other servers
[REMOVES]
[NOTES]

Changes to 1.2.2 +nb

[CHANGES]
*bans.php,user.php,lib/bans/*.php,lib/constants.php,superuser.php --> we have a new SU flag: SU_IS_BANMASTER. You can now assign (apart from SU_EDIT_USERS) a new flag that lets one edit bans, even if he/she has no user edit rights. This makes sense, because editing users and banning them is far apart - a ban can be revoked easily, if somebody wrecked havoc in user files, or even deleted (!) them, well. Nasty. I have not limited the powers currently, all included, including perma bans. I also split up the bans from user.php to bans.php and subdirs to make it better distinguishable.