@@ -2,6 +2,7 @@ Changes to 1.2.4 +nb
 [CHANGES]
 *home.php --> added a "forgotten password" link below the Login Button
 [FIXES]
+*hof.php --> money sorting did not work with the cast() commands in the mysql syntax anymore (since mysql 5.5). Redid that and it works now (included even number formatting to full hundreds)
 [REMOVES]
 [NOTES]
 
